Release CMTK-1.0.1:

- API: changed XformList::Apply to XformList::ApplyInPlace

- Build: added missing applications "regress" and "probe_xform" to default
    build again.

- Changed: probe_xform tool now uses different command line semantics. All
    transformations are concatenated rather than applied separately.

- Added: normal vector of InfinitePlane can now be set directly.

- Fixed: cmtkVoxelMatchingAffineFunctional.h compile error when SMP is turned
    off.

Release CMTK-1.0.0 (2009-06-16):

- API: "TemplateHistogram", "LogTemplateHistogram", and "TemplateHistogram2D"
    renamed to remove "Template" part. Also removed all global histogram
    typedefs (e.g., "UnsignedIntHistogram") to be more flexible with
    conditional instantiations
- API: "Histogram2D" renamed to "JointHistogram".
- API: all "VM_" class prefixes replaced with more explicit "VoxelMatching"

- Documentation: added extensive documentation with code examples for several
    key classes.

- SVN: moved test data out of "core" tree and into "data"; allow configuration
    of separate (shared) data tree from top-level CMake file

- Added: MiniXML library included in source tree for all upcoming XML needs.
- Added: initial support for XML command line parameter descriptions. Mostly
    infrastructure work to make sure XML can be generated by CommandLine
    class with minimal extra programmer involvement
- Added: cmtk::Console can now typeset text with given margin and width.
- Added: Windows implementation of mutex lock.
- Added: cmtk::StdOut stream
- Added: "--auto-multi-levels" option for registration tool. Selects automatic
    resolution and optimization parameters for given number of levels.
- Added: new top-level configuration option to switch all numerical algorithms
    (i.e., AlgLib) to single-precision floats. This can be used to save memory
    in extreme situations (for example, high-resolution volume reconstruction)